<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Autonomy</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1"></string>
    <string name="title_section2"></string>
    <string name="title_section3"></string>
    <string name="title_section1_">Map</string>
    <string name="title_section2_">Task List</string>
    <string name="title_section3_">Community</string>
    <string name="menu_map">Map</string>
    <string name="menu_community">Community</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_stt">Speech To Text</string>
    <string name="map_view_edit_text_hint">Search..</string>
    <string name="pick_defiance">Defiance</string>
    <string name="pick_mof">Ministry of Freedom</string>
    <string name="pref_show_accepted">Only show accepted tasks</string>
    <string name="pref_show_other_players">Show other players</string>
    <string name="pref_show_compass">Show compass</string>
    <string name="pref_exlap_connect">Connect to Exlap</string>
    <string name="pref_exlap_connected">Connected to Exlap?</string>
    <string name="pref_exlap_subscribed">subscribed?</string>
    <string name="pref_reset_userdata">Reset Userdata</string>
    <string name="pref_fake_location">Start Fake Location</string>

</resources>