<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings">
    </item>

    <item android:id ="@+id/action_speech_to_text"
        android:orderInCategory="90" 
        android:showAsAction="always"
        android:title="@string/menu_stt"
        android:icon="@android:drawable/ic_btn_speak_now" />
    
    <item android:id="@+id/menu_map"
          android:icon="@drawable/map"
          android:title="@string/menu_map"
          android:showAsAction="always" />
    
    <item android:id="@+id/menu_tasks"
          android:icon="@drawable/tasks"
          android:title="@string/menu_tasks"
          android:showAsAction="always" />
    
    <item android:id="@+id/menu_community"
          android:icon="@drawable/community"
          android:title="@string/menu_community"
          android:showAsAction="always" />
    

</menu>
